# Portable-SLAM

./: CMakeLists.txt  LICENSE  README.md  bashrc  build.sh  entrypoint.sh  package.xml  portable_slam_humble.dockerfile  portable_slam_rolling.dockerfile  ros2_portable_slam.dockerfile  run.sh
config/: gtsam_slam_config.yaml  imu_filter_madgwick.yaml  imu_odom_config.yaml  lps22hb_config.yaml  mapper_params_online_async.yaml  portable_slam.rviz
docs/: 00_initial_design.md  01_i2c_setup.md  02_constraint_analysis.md  03_gtsam_architecture.md  04_gtsam_implementation.md  graph.mmd
hw/rk3588/: rk3588-i2c5-m3.dts
include/portable_slam/: gtsam_slam.hpp  icm20948.hpp  lps22hb.hpp
launch/: debug_ekf_filter.py  debug_imu_filter.py  launch.py  launch_gtsam_opi5.py  launch_gtsam_rpi4.py  launch_opi5.py  launch_rpi4.py
scripts/: check_i2c_permission.sh  launch_portable_slam.sh  sync_and_build.sh  test_slam_setup.sh
src/: gtsam_slam_node.cpp  icm20948.cpp  lps22hb.cpp  lps22hb_node.cpp  sense_hat_node.cpp  static_transform_node.cpp
