<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>portable_slam</name>
  <version>0.0.0</version>
  <description>Portable SLAM using Waveshare Sense Hat B and YD Lidar</description>
  <maintainer email="info@yobotics.dev">Yongkie Wiyogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>slam_toolbox</depend>
  <depend>ydlidar_ros2_driver</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
